update of collection names

--- a/test/testCosmicMuonProducer.cfg
+++ b/test/testCosmicMuonProducer.cfg
@@ -99,11 +99,11 @@ process MuonC = {
    }
    # Now order modules for execution
    #
-   sequence muonDigi = { muoncscdigi & muondtdigi }
+   sequence muonDigi = { muonCSCDigis & muonDTDigis }
 
-   sequence muonReco = { CSCRecHit2DProducer &  CSCSegmentProducer &  DTRecHit1DProducer &  DTSegment2DProducer &  DTSegment4DProducer}
+   sequence muonReco = {csc2DRecHit & cscSegments & dt1DRecHits & dt2DSegments & dt4DSegments }
 
-   path p1 = {SimG4Object, mix, muonDigi, muonReco, CosmicMuonSeed, CosmicMuon}
+   path p1 = {g4SimHits, mix, muonDigi, muonReco, CosmicMuonSeed, CosmicMuon}
    endpath outpath = { output }
 
 }
