--- a/test/SegmentsToTracks.cfg
+++ b/test/SegmentsToTracks.cfg
@@ -51,7 +51,7 @@ process MuonSToT = {
    # Now order modules for execution
    #
 
-   path p1 = {CosmicMuonSeed, CosmicMuon}
+   path p1 = {CosmicMuonSeed, cosmicMuons}
    endpath outpath = { output }
 
 }
