--- a/test/CosmicGenToSegments.cfg
+++ b/test/CosmicGenToSegments.cfg
@@ -11,10 +11,9 @@ process Prod1 = {
       }
    }
 
-
    source = CosMuoGenSource {
-     untracked int32  maxEvents = 1000
-     untracked double MinEn =    2.
+     untracked int32  maxEvents = 2000
+     untracked double MinEn =    7.
      untracked double MaxEn =   10000
      untracked double MinTheta =  0.
      untracked double MaxTheta = 88.
@@ -30,13 +29,13 @@ process Prod1 = {
    }
 
    include "Geometry/CommonDetUnit/data/globalTrackingGeometry.cfi"
-   include "Geometry/CMSCommonData/data/cmsSimIdealGeometryXML.cfi"
+   include "Geometry/CMSCommonData/data/cmsMTCCGeometryXML.cfi"
 
    #Magnetic Field
    include "MagneticField/Engine/data/volumeBasedMagneticField.cfi"
 
-   #non-beam Oscar Producer 
-   include "RecoTracker/SingleTrackPattern/test/nonbeamOscarProducer.cfi"
+   # Detector Simulation
+   include "SimG4Core/Application/data/SimG4Object.cfi"
 
    # Digitization of the simulated hits
 
@@ -47,6 +46,10 @@ process Prod1 = {
    # DT
    include "Geometry/DTGeometry/data/dtGeometry.cfi"
    include "SimMuon/DTDigitizer/data/muondtdigi.cfi"
+
+   # RPC
+   include "Geometry/RPCGeometry/data/rpcGeometry.cfi"
+   include "SimMuon/RPCDigitizer/data/muonrpcdigi.cfi"
 
    # Mixing Module is *required* to simulated Ecal/Hcal/Muon digitization !
 
@@ -76,10 +79,12 @@ process Prod1 = {
    # Now order modules for execution
    #
    sequence muonDigi = { muonCSCDigis & muonDTDigis }
-
-   sequence muonReco = {csc2DRecHits & cscSegments & dt1DRecHits & dt2DSegments & dt4DSegments }
+   sequence dtReco = {dt1DRecHits, dt2DSegments, dt4DSegments }
+   sequence cscReco = {csc2DRecHits, cscSegments }
+   sequence muonReco = {cscReco & dtReco }
 
    path p1 = {g4SimHits, mix, muonDigi, muonReco}
+
    endpath outpath = { output }
 
 }
