--- a/test/CosmicGenToSegments.cfg
+++ b/test/CosmicGenToSegments.cfg
@@ -36,6 +36,8 @@ process Prod1 = {
 
    # Detector Simulation
    include "SimG4Core/Application/data/SimG4Object.cfi"
+   replace g4SimHits.Generator.HepMCProductLabel = "source"
+
 
    # Digitization of the simulated hits
 
