fix and add rpc

--- a/test/CosmicGenToSegments.cfg
+++ b/test/CosmicGenToSegments.cfg
@@ -4,10 +4,10 @@ process Prod1 = {
 
    service = RandomNumberGeneratorService
    {
-      untracked uint32 sourceSeed = 135799753
+      untracked uint32 sourceSeed = 98123
       PSet moduleSeeds =
       {
-         untracked uint32 VtxSmeared = 123456789
+         untracked uint32 g4SimHits = 1234567
       }
    }
 
@@ -24,7 +24,7 @@ process Prod1 = {
      untracked double ElossScaleFactor = 0.0
      #WARNING: If "TrackerOnly=true" then tracker-only setup will be used. 
      #This means R=1100 and Z=1100, no material or B-field outside is considered
-     untracked bool TrackerOnly = true
+     untracked bool TrackerOnly = false
      untracked bool Verbosity = false
    }
 
@@ -38,12 +38,11 @@ process Prod1 = {
    include "SimG4Core/Application/data/SimG4Object.cfi"
    replace g4SimHits.Generator.HepMCProductLabel = "source"
 
-
    # Digitization of the simulated hits
 
    # CSC
    include "Geometry/CSCGeometry/data/cscGeometry.cfi"
-   include "SimMuon/CSCDigitizer/data/muoncscdigi.cfi"
+   include "SimMuon/CSCDigitizer/data/muonCSCDigis.cfi"
 
    # DT
    include "Geometry/DTGeometry/data/dtGeometry.cfi"
@@ -51,7 +50,7 @@ process Prod1 = {
 
    # RPC
    include "Geometry/RPCGeometry/data/rpcGeometry.cfi"
-   include "SimMuon/RPCDigitizer/data/muonrpcdigi.cfi"
+   include "SimMuon/RPCDigitizer/data/muonRPCDigis.cfi"
 
    # Mixing Module is *required* to simulated Ecal/Hcal/Muon digitization !
 
@@ -72,18 +71,21 @@ process Prod1 = {
    include "RecoLocalMuon/DTSegment/data/dt2DSegments_CombPatternReco2D_ParamDrift.cfi"
    include "RecoLocalMuon/DTSegment/data/dt4DSegments_CombPatternReco4D_ParamDrift.cfi"
 
+   include "RecoLocalMuon/RPCRecHit/data/rpcRecHits.cfi"
+
    # Output module
    #
    module output = PoolOutputModule
    {
-      untracked string fileName = "cosSegs.root"
+      untracked string fileName = "/tmp/cliu/cosSegs.root"
    }
    # Now order modules for execution
    #
-   sequence muonDigi = { muonCSCDigis & muonDTDigis }
+   sequence muonDigi = { muonCSCDigis & muonDTDigis & muonRPCDigis }
    sequence dtReco = {dt1DRecHits, dt2DSegments, dt4DSegments }
    sequence cscReco = {csc2DRecHits, cscSegments }
-   sequence muonReco = {cscReco & dtReco }
+   sequence rpcReco = {rpcRecHits}
+   sequence muonReco = {cscReco & dtReco & rpcRecHits}
 
    path p1 = {g4SimHits, mix, muonDigi, muonReco}
 
