--- a/test/globalCosmicTracks.cfg
+++ b/test/globalCosmicTracks.cfg
@@ -1,15 +1,19 @@
 process GlobalCosmic = {
 
+  untracked PSet maxEvents = {untracked int32 input = -1}
+
   source = PoolSource {
          untracked vstring fileNames = {"file:cosTracks.root"}
-         untracked int32 maxEvents = -1
         }
 
   # MessageLogger
   include "FWCore/MessageLogger/data/MessageLogger.cfi"
   replace MessageLogger.cout.threshold = "DEBUG"
 
+   include "Geometry/MuonNumbering/data/muonNumberingInitialization.cfi"
+
   include "RecoMuon/CosmicMuonProducer/data/GlobalCosmicMuonProducer.cff"
+
   # Output
   module out = PoolOutputModule {
     untracked string fileName ="GCTracks.root"
