--- a/test/validate.cfg
+++ b/test/validate.cfg
@@ -3,8 +3,8 @@ process v =  {
   include "FWCore/MessageLogger/data/MessageLogger.cfi"
   service = AdaptorConfig {}
 
+  untracked PSet maxEvents = {untracked int32 input = -1}
   source = PoolSource {
-    untracked int32 maxEvents = -1
     untracked vstring fileNames = { "file:cosTracks.root" }
   }
 
@@ -20,8 +20,9 @@ process v =  {
   ## Geometry
   include "Geometry/CommonDetUnit/data/globalTrackingGeometry.cfi"
 
-  es_module = MuonDetLayerGeometryESProducer { }
 
+  include "RecoMuon/DetLayers/data/muonDetLayerGeometry.cfi"
+  include "Geometry/MuonNumbering/data/muonNumberingInitialization.cfi"
   include "RecoMuon/TrackingTools/data/MuonServiceProxy.cff"
 
   module analysis = CosmicMuonValidator {
