make a cff to handle the services

--- a/test/SegmentsToTracks.cfg
+++ b/test/SegmentsToTracks.cfg
@@ -13,7 +13,7 @@ process MuonSToT = {
 
    ## Cosmic Reco
    include "RecoMuon/MuonSeedGenerator/data/CosmicMuonSeedProducer.cfi"
-   include "RecoMuon/CosmicMuonProducer/data/cosmicMuons.cfi"
+   include "RecoMuon/CosmicMuonProducer/data/cosmicMuons.cff"
    include "RecoTracker/SpecialSeedGenerators/data/CosmicSeed.cfi"
    include "RecoTracker/SingleTrackPattern/data/CosmicTrackFinder.cfi"
 
