--- a/test/globalCosmicTracks.cfg
+++ b/test/globalCosmicTracks.cfg
@@ -9,7 +9,7 @@ process GlobalCosmic = {
 
   include "Configuration/StandardSequences/data/FakeConditions.cff"
   include "Configuration/StandardSequences/data/Reconstruction.cff"
-  include "RecoMuon/CosmicMuonProducer/data/globalCosmicMuons.cfi"
+  include "RecoMuon/CosmicMuonProducer/data/globalCosmicMuons.cff"
   # Output
   module out = PoolOutputModule {
     untracked string fileName ="GCTracks.root"
