--- a/test/validate.cfg
+++ b/test/validate.cfg
@@ -25,10 +25,13 @@ process v =  {
   include "Geometry/MuonNumbering/data/muonNumberingInitialization.cfi"
   include "RecoMuon/TrackingTools/data/MuonServiceProxy.cff"
 
+  service = TFileService {
+    string fileName = "muv.root"
+  }
+
   module analysis = CosmicMuonValidator {
    InputTag TrackLabel = cosmicMuons
    InputTag SimTrackLabel = g4SimHits 
-   string OutputFile = "validator.root"
    using MuonServiceProxy
 
   } 
